<resources>
    <string name="app_name">Cadewi - Clientes</string>
    <string name="action_settings">Configuración</string>
    <string name="progress_loading">Cargando...</string>
    <string name="face_recognition">Reconocimineto facial</string>
    <string name="save_photo">Guardar Imagen/Foto</string>
    <string name="information_photo">Información de Foto/Imágen</string>
    <string name="full_image">Ver la Foto/Imágen completa</string>
    <string name="rotate_picture">Rotar Foto/Imágen 90º</string>
    <string name="go_to_fragment">Ir a Fragment</string>
    <string name="title_activity">Ejemplo en Activity Magical Camera</string>
    <string name="go_to_activity">Salir a Activity</string>
    <string name="title_fragment">Ejemplo en Fragment Magical Camera</string>
    <string name="version">Versión de app 1.1.2</string>
    <string name="menu_shared">Compartir</string>
    <string name="menu_about">Acerca de Desarrolladores</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_github">Github</string>
    <string name="menu_donation">Ayúdanos</string>
    <string name="menu_documentation">Documentación</string>
    <string name="menu_todo_list">Siguientes tareas</string>
    <string name="menu_terms_conditions">Términos y condiciones</string>
    <string name="menu_hire_us">Contáctenos</string>
    <string name="base_Url">www.cadewigroup.com</string>
    <string name="dev_creator">Creador de MagicalCamera</string>
    <string name="dev_image_creator">https://avatars3.githubusercontent.com/u/13343461?v=3&amp;s=460</string>
    <string name="dev_description">El creador de MagicalCamera, realizó la funcionalidad de toma de fotografía, selección de fotografía, rotación de imágen, conversión de Bitmap magical, guardar imágen en dispositivo, reconocimiento facial, y obtener información privada de la fotografía.</string>
    <string name="dev_link_git_creator">https://github.com/fabian7593</string>
    <string name="dev_link_git_contributor_1">https://github.com/arthursz</string>
    <string name="dev_link_git_contributor_2">https://github.com/cutiko</string>
    <string name="dev_contributor">Ayudantes y contribuyentes de MagicalCamera</string>
    <string name="dev_name_contributor_1">Arthur Zettler</string>
    <string name="dev_image_contributor_1">https://avatars2.githubusercontent.com/u/6000680?v=3&amp;s=460</string>
    <string name="dev_desc_contributor_1">Arthur creó el return del String de la ruta de la imágen guardada en el dispositivo.</string>
    <string name="dev_name_contributor_2">Erick Navarro</string>
    <string name="dev_image_contributor_2">https://avatars3.githubusercontent.com/u/6012585?v=3&amp;s=460</string>
    <string name="dev_desc_contributor_2">Erick añadío un mejor uso en las librerías de Google Play, y desarrollo una mejora de la aplicación a nivel de permisos requeridos, mejora a nivel de código y otros componentes.</string>
    <string name="message_save_manual">almacenado en :</string>
    <string name="message_see_photo_information">Ver la información de la imágen.</string>
    <string name="convert_to_string_base_64_title">Ver el string en base 64, solo muestra una longitud de 300 carácteres para este ejemplo.</string>
    <string name="convert_to_string_base_64">Convertir a String Base64</string>
    <string name="message_ok">Aceptar</string>
    <string name="info_data_latitude">Latitud: </string>
    <string name="info_data_latitude_referene">Referencia de Latitud: </string>
    <string name="info_data_longitude">Longitud: </string>
    <string name="info_data_longitude_reference">Referencia de Longitud: </string>
    <string name="info_data_date_time_photo">Fecha y hora de la foto: </string>
    <string name="info_data_date_stamp_photo">Fecha sello de la foto: </string>
    <string name="info_data_ISO">ISO: </string>
    <string name="info_data_orientation_photo">Orientación de la imágen: </string>
    <string name="info_data_image_lenght">Alto de la imágen: </string>
    <string name="info_data_image_width">Ancho de la imágen: </string>
    <string name="info_data_make_company">Compañia del dispositivo: </string>
    <string name="info_data_model_device">Modelo de dispositivo: </string>
    <string name="help_us_text">Puedes ayudar de distintas maneras, \n para continuar realizando librerías OpenSource (para Android e iOS):</string>
    <string name="help_us_option_1"><b>1. Donación.</b> Este método de ayuda puede realizarlo en:</string>
    <string name="help_us_option_1_1">   * La página de github en la sección How to start > Donate.</string>
    <string name="help_us_option_1_2">   * Comprar la aplicación MagicalCamera (donate) en play store por un dólar.</string>
    <string name="help_us_option_2"><b>2.</b> Comparte con tus amigos.</string>
    <string name="help_us_option_3"><b>3.</b> Dar me gusta y suscribirse al canal de youtube de Frosquivel Developer.</string>
    <string name="help_us_option_4"><b>4.</b> Realizar Fork y dar una estrella en github.</string>
    <string name="help_us_option_5"><b>5.</b> Si tienes alguna idea para una librería OpenSource o para agregar a Magical Camera comuníquese al correo fabian7593@gmail.com.</string>
    <string name="contact_us_title">Contácteme</string>
    <string name="contact_us">Soy especialista en desarrollo Mobile (Android / iOS nativo), si necesitas contratarme, contácteme al correo fabian7593@gmail.com</string>
    <string name="email_subject">MagicalCamera 5.0.5 Librería de Android</string>
    <string name="email_choose">Elegir correo cliente</string>
    <string name="email_title">Compartir MagicalCamera</string>
    <string name="email_text">Hola somos los desarrolladores de MagicalCamera, \n\n Querémos compartir con usted ésta librería, MagicalCamera, para usar de una manera simple la cámara en Android nativo. \n\n Puedes ver la librería en. \n XXXX1 \n\n Y descargar la aplicación aquí: \n XXXX2 \n\n Y si puedes descargar la aplicación paga, nosotros estaremos muy agradecidos \n ver aquí: XXXX3</string>
    <string name="value_directory_name">Magical Camera</string>
    <string name="value_photo_name">MagicalCamera_prueba_nombre_foto</string>
    <string name="value_selected_picture">Seleccione Imágen</string>
    <string name="value_quality_picture">100</string>
    <string name="value_autoincrement_picture">True</string>
    <string name="value_facial_recognition_thick">50</string>
    <string name="value_facial_recognition_color">#0E477F</string>
    <string name="shared_photo_name">Nombre Foto</string>
    <string name="shared_directory_name">Nombre de Carpeta</string>
    <string name="shared_title_popup">Título de ventana emergente</string>
    <string name="shared_quality_photo">Porcentaje de calidad de la foto</string>
    <string name="shared_type_extension">Tipo de extensión</string>
    <string name="shared_autoincrement">Incremento automático en nombre imágen</string>
    <string name="shared_line_thickness">Grosor de línea reconocimiento facial</string>
    <string name="shared_preference_title">Preferencias de configuración</string>
    <string name="shared_accept">Aceptar</string>
    <string name="shared_cancel">Cancelar</string>
    <string name="shared_change_color">Cambiar Color</string>
    <string name="shared_hexadecimal_color">Color de línea reconocimiento facial</string>
    <string name="image_down_quality">Presione para bajar la calidad del Bitmap en tiempo real</string>
    <string name="shared_preference_extension_png">PNG</string>
    <string name="shared_preference_extension_jpg">JPEG</string>
    <string name="shared_preference_extension_webp">WEBP</string>
    <string name="hire_us_first_fragment">Hola, Soy Fabián Rosales, haz clic en un ícono para contactarme, o deslice su dedo para ver más.</string>
    <string name="hire_us_second_fragment">Programación de aplicaciones para dispositivos móviles...</string>
    <string name="hire_us_third_fragment">Programación iOS y Android 100% nativo... ;)</string>
    <string name="hire_us_fourth_fragment">Tecnologías en la nube...</string>
    <string name="hire_us_fifth_fragment">Programación de aplicaciones Web...</string>
    <string name="hire_us_sixth_fragment">Gráficos, informes y análisis.</string>
    <string name="error">Error!</string>
    <string name="error_image_null">Tu imágen es null, por favor seleccione o tome una.</string>
    <string name="error_not_connect">No puede conectarse</string>
    <string name="error_not_have_permissions">No tiene los permisos para utilizar está funcionalidad, porfavor, acepte los permisos</string>
    <string name="error_not_save_feedback">No pudiste enviar el mensaje, por favor intente más tarde.</string>
    <string name="error_init_magicalcamera">Por favor inicie MagicalCamera, en un context static para usarlo en todo el activity.</string>
    <string name="error_not_have_data">No tienes datos que mostrar, porque la ruta es incorrecta, guarda tu foto primeramente.</string>
    <string name="error_dont_save_photo">Lo siento, su foto no pudo guardarse en el dispositivo, por favor asegurese que tiene activos los permisos de lectura y escritura.</string>
    <string name="error_not_detect_face">La librería no detecta ningún rostro en la fotografía</string>
    <string name="error_not_open_messenger">No se puede abrir Facebook Messenger</string>
    <string name="error_not_open_linkedin">No se puede abrir LinkedIn</string>
    <string name="error_not_open_youtube">YNo se puede abrir YouTube</string>
    <string name="error_string_base_64">El String en base 64 es muy lento por favor intente de nuevo con un bitmap de menor tamaño.</string>
    <string name="note_fragment">NOTA: Este cambio es solo reflejado en el ejemplo de Activity. El ejemplo de Fragments, siempre tiene la configuración básica, y no fue realizado con AsyncTask, para mantener la simplicidad del ejemplo.</string>
    <string name="feedback">Críticas</string>
    <string name="feedback_save">Guardar</string>
    <string name="feedback_save_message">Tu comentario a sido guardado, gracias :)</string>
    <string name="feedback_not_save">Por favor llene todos los campos.</string>
    <string name="feedback_select_comment">Seleccione una opción</string>
    <string name="feedback_write_comment">Escribe tu comentario</string>
    <string-array name="feedbacks">
        <item>Críticas</item>
        <item>Problemas</item>
        <item>Nuevas ideas</item>
    </string-array>
    <string name="title_activity_permissions">PermissionsActivity</string>
    <string name="prompt_Profile">Perfil</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña (requerida)</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="nav_AddUser">Agregar Usuario</string>
    <string name="nav_ViewUsers">Listado de Usuarios</string>
    <string name="nav_ViewClients">Listado de Clientes</string>
    <string name="nav_AddClient">Agregar Cliente</string>
    <string name="nav_Close_Sesion">Cerrar Sesión usuario</string>
    <string name="nav_Close">Salir de la app</string>
    <string name="action_sign_in_short">login</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="Phone">TELEFONO</string>
    <string name="Email">CORREO</string>
    <string name="Address">DIRECCIÓN</string>
    <string name="location">UBICACIÓN</string>
    <string name="unregistered_location">Localizacion no registrada</string>
    <string name="clients">Clientes</string>
    <string name="users">Usuarios</string>
    <string name="map">Mapa de ubicaciones</string>
    <string name="galery">galeria de imagenes</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="location_menu">Ubicación</string>
    <string name="add_image">Agregar Imagen de Cliente</string>
</resources>