<?xml version="1.0" encoding="utf-8"?>


    <menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android" >


        <item
            android:id="@+id/more"
            android:icon="@drawable/dots_vertical"
            android:orderInCategory="101"
            android:title=""
            app:showAsAction="always">

            <menu>

                <item
                    android:id="@+id/menu_galery_client"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/galery" />


                <item
                    android:id="@+id/menu_add_image"
                    android:icon="@drawable/image_plus"
                    android:title="@string/add_image" />

                <item
                    android:id="@+id/menu_location_client"
                    android:icon="@drawable/map_marker"
                    android:title="@string/location_menu" />

                <item
                    android:id="@+id/menu_edit_client"
                    android:icon="@drawable/pencil"
                    android:title="@string/edit" />

                <item
                    android:id="@+id/menu_delete_client"
                    android:icon="@drawable/trash_can"
                    android:title="@string/delete" />

            </menu>

        </item>




    </menu>

