<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/panel"
    android:orientation="vertical"
    android:paddingTop="5dp">

    <ScrollView
        android:id="@+id/principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">


            <!-- TODO: Update blank fragment layout -->
            <android.support.v7.widget.CardView
                android:id="@+id/bankcardId"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/imageClient"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:src="@drawable/camera_off"
                     />

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="CLIEN NAME .....  "
                android:textSize="@dimen/name_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRFC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="xxxxxxxxxxxxxxxxxxxx"
                android:textSize="@dimen/title_size" />


            <TextView
                android:id="@+id/lblphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Phone"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/template_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txtphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="12dp"
                        android:text="XXXX-XXXX-XXXXX-XXXXX" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@drawable/phone"
                        android:tint="@color/colorAccent" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/lblemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Email"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/template_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtemail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="12dp"
                        android:text="name.lastname@contoso.com" />


                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@drawable/email"
                        android:tint="@color/colorAccent" />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/lbladdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Address"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/template_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtstreet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="12dp"
                        android:text="XXXXXXXXXXXXXXXX N.XX" />

                    <TextView
                        android:id="@+id/txtzipCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="XXXXXX, XXXXXXXXXXXXXXXXXX" />

                    <TextView
                        android:id="@+id/txtDelegation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="XXXXXX, XXXXXXXXXXXXXXXXXX" />

                    <TextView
                        android:id="@+id/txtState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="XXXXXX, XXXXXXXXXXXXXXXXXX" />

                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="40dp"
                        android:src="@drawable/map_marker"
                        android:tint="@color/colorAccent" />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/lbllocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/location"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/template_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <CheckBox
                        android:id="@+id/chkLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:checked="true"
                        android:editable="false"
                        android:enabled="true"
                        android:fadeScrollbars="false"
                        android:text="@string/unregistered_location" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/crosshairs_gps"
                        android:tint="@color/colorAccent" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>


